:memo: comlete memo